# LED-Strip-Controller-TUI

./: .gitignore  .mega-linter.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/: Dependabot.yaml  dependabot.yaml
.github/workflows/: Mega Linter.yaml  mega-linter.yaml  release-please.yaml
docs/: Diagrams.drawio
src/: .python-version  Main.py  UserInput.py
src/Communications/: CommsProtocol.py  Types.py
