[project]
name = "led-strip-controller-tui"
version = "0.2.1"
description = "TUI for LED strip controller"
authors = [ { name = "Scott Gibb" } ]
requires-python = ">=3.10"
dependencies = [
  "pyserial==3.5",
]

# UV will use this file to determine project dependencies. Run `uv lock` to
# generate a lockfile and `uv sync` to install.
